Bug 66974 - [radeonsi] rendering is broken in L4D2
Summary: [radeonsi] rendering is broken in L4D2
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-16 18:25 UTC by Laurent carlier
Modified: 2013-08-17 17:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
broken font rendering in L4D2 (1.11 MB, image/png)
2013-07-16 18:25 UTC, Laurent carlier
Details
Broken in-game rendering (2.27 MB, image/png)
2013-07-16 18:28 UTC, Laurent carlier
Details
Broken in-game rendering Dota 2 (288.21 KB, image/jpeg)
2013-07-19 17:12 UTC, Vladimir Usikov
Details
grafical glitch in HL2 ep2 (327.00 KB, image/jpeg)
2013-08-17 16:55 UTC, Vladimir Usikov
Details
grafical glitch in Portal (299.78 KB, image/jpeg)
2013-08-17 16:57 UTC, Vladimir Usikov
Details

Description Laurent carlier 2013-07-16 18:25:45 UTC
Created attachment 82494 [details]
broken font rendering in L4D2

* radeon HD7870
* mesa-git:
  OpenGL renderer string: Gallium 0.4 on AMD PITCAIRN
  OpenGL version string: 2.1 Mesa 9.2.0-devel (git-121ea0b)
* llvm-3.4svn rev186383

Font rendering is broken (similar bug in counter-strike: source), and game rendering also.

An apitrace (from git) file is available here:
http://pkgbuild.com/~lcarlier/traces/L4D2_trace-130716.tar.xz
Comment 1 Laurent carlier 2013-07-16 18:28:36 UTC
Created attachment 82495 [details]
Broken in-game rendering
Comment 2 Michel Dänzer 2013-07-19 13:54:10 UTC
I just bisected similar issues in Team Fortress 2 (which also uses the Source engine) to the commit below. Looks like we're doing something wrong for clip vertex support.

commit e3befbca5ed9f22effcdc91c5886c86b644bc190
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed May 15 18:09:50 2013 +0200

    radeonsi: Handle TGSI_SEMANTIC_CLIPVERTEX

    17 more little piglits.
Comment 3 Vladimir Usikov 2013-07-19 17:10:51 UTC
Not only in L4D2, T have same bug in Dota 2 and HL2 (Ep1, EP2, Lost Coast).

Radeon HD 7950; linux 3.10; mesa 9.2git; llvm 3.4svn
Comment 4 Vladimir Usikov 2013-07-19 17:12:31 UTC
Created attachment 82701 [details]
Broken in-game rendering Dota 2
Comment 5 Michel Dänzer 2013-08-15 17:56:01 UTC
commit b00269aa5887b88d2e037d6bfa374779902f8743
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Wed Aug 7 18:14:16 2013 +0200

    radeonsi: Don't leave gaps between position exports from vertex shader
    
    If the vertex shader exports clip distances but not point size, use
    position exports 1/2 instead of 2/3 for the clip distances. Fixes
    geometry corruption in that case.
Comment 6 Vladimir Usikov 2013-08-17 16:55:57 UTC
Created attachment 84177 [details]
grafical glitch in HL2 ep2

This type  of rendering errors is gone, but still not clean in HL2 ep2, HL2 Lost Coast, Portal, left 4 Death 2. Dota 2 look like a normal.
Comment 7 Vladimir Usikov 2013-08-17 16:57:12 UTC
Created attachment 84178 [details]
grafical glitch in Portal

Do i mast create new bug report?
Comment 8 Laurent carlier 2013-08-17 17:01:53 UTC
(In reply to comment #7)
> Created attachment 84178 [details]
> grafical glitch in Portal
> 
> Do i mast create new bug report?

https://bugs.freedesktop.org/show_bug.cgi?id=68162
Comment 9 Vladimir Usikov 2013-08-17 17:07:11 UTC
I apologize for my carelessness.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.